# tracing-n-racing

./: CMakeLists.txt
.zed/: debug.json
src/: camera.cpp  camera.h  main.cpp  scene.cpp  scene.h  trasform.h  utils.cpp  utils.h
src/intersection/: intersection_functions.h  intersection_types.h
